Handle special properties in fake VHAL.
Add the logic to handle get/set/subscribe/unsubscribe of special
properties. Add corresponding unit test cases.

Test: atest FakeVehicleStubUnitTest
Bug: 241006476
Change-Id: Ie6937f29045763a944d53eb15854bc25aecd38dc